# hello-oidc-auth-with-oauth2-proxy

./: COPYING  Makefile  README.md  app.env  compose.fastapi.yaml  compose.flask.yaml  compose.whoami.yaml  compose.yaml  oauth2-proxy.env  pyproject.toml
fastapi/: Containerfile  auth.py  pyproject.toml  requirements.txt  webapp.py
flask/: Containerfile  app.py  auth.py  requirements.txt
keycloak/data/import/: hello-realm.json  hello-users-0.json
